<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserDetailFragment">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_detail"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                tools:src="@tools:sample/avatars" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:text="@string/name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_birth_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_birth"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_birth_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_age_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_age"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_title_country"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:text="@string/title_detail_country"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detail_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country" />
        </TableRow>

    </TableLayout>

</FrameLayout>